--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "scripts": {
     "test": "node_modules/.bin/_mocha",
     "prestart": "npm run theme:build",
-    "start": "NODE_ENV=production node index.js",
-    "start:dev": "NODE_ENV=development node index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "start:dev": "cross-env NODE_ENV=development node index.js",
     "theme:clean": "rimraf public_static/lib/semantic/*",
     "theme:build": "cd semantic && gulp build",
     "theme:watch": "cd semantic && gulp watch",
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cross-env": "^7.0.2",
     "csurf": "^1.9.0",
     "escape-html": "^1.0.3",
     "express": "^4.15.2",
     "express-basic-auth": "^1.0.2",
     "express-hbs": "^1.0.4",
     "express-session": "^1.15.2",
-    "semantic-ui": "^2.3.1",
     "natives": "^1.1.6",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
@@ -29,6 +29,7 @@
     "probot": "^9.11.3",
     "request-promise": "^4.2.1",
     "rsvp": "^3.5.0",
+    "semantic-ui": "^2.3.1",
     "sequelize": "^4.44.4"
   },
   "name": "boss-backend",
